2001-10-27  Alexander V. Lukyanov <lav@yars.free.net>

	* FtpDirList.cc: clean up; style.
	* FileCopy.cc: style; restore eof behaviour.
	* misc.cc: rewrite mem_crlf and crlf_to_lf to make them more clear.

2001-10-27  Glenn Maynard <g_ld@zewt.org>

	* FileCopy.cc, FtpDirList.cc, FtpDirList.h, misc.cc, misc.h:
	  Speed up ascii mode transfer.
	* command.cc: cosmetics.

2001-10-25  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc, misc.h: (mktime_from_tz) new function.
	* FtpListInfo.cc, FtpListInfo.h: use it.
	* resource.cc: (ftp:timezone) new setting.

2001-10-25  Glenn Maynard <g_ld@zewt.org>

	* FileSetOutput.cc, FileSetOutput.h, commands.cc: -1 option for cls;
	  readded -q to help cls; added missing \n.
	* misc.cc, misc.h: -rwxr-xr-t implies S_IXOTH; -rwxr-xr-T does not;
	  mktime_from_utc has a problem when isdst is -1; the returned time is
	  off by an hour if the local timezone is in DST.
	* FtpListInfo.cc: assume unix server's timezone to be GMT.

2001-10-25  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, FileAccess.h, FileCopyFtp.cc, FileSetOutput.cc, Fish.cc,
	  GetJob.cc, Http.cc, NetAccess.cc, ResMgr.h, Resolver.cc,
	  Speedometer.cc, StatusLine.cc, commands.cc, ftpclass.cc, ftpclass.h,
	  lftp.cc: (QueryBool) new functions, now lftp should compile with
	  a compiler without bool type.
	* Fish.cc: check line length before comparing with yes/no/password;
	  remove extra xfree(home), fortunately home was null at that point.

2001-10-22  Alexander V. Lukyanov <lav@yars.free.net>

	* complete.cc: fix local tilde completion.
	* Fish.cc, resource.cc: add fish:shell setting.
	* SMTask.cc, misc.cc: include time.h first.
	* Makefile.am: distribute convert-netscape-cookies.

2001-10-19  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: fix typo in cls help. Reported by Nicolas Noble.
	* complete.cc: restore prompt and clear message on SIGINT.

2001-10-17  Alexander V. Lukyanov <lav@yars.free.net>
